# breast-cancer-detector-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
src/data/: annotation.rs  batcher.rs  dataset.rs  image_ops.rs  mod.rs
src/inference/: detect.rs  draw.rs  mod.rs
src/model/: backbone.rs  detector.rs  head.rs  mod.rs  resnet.rs
src/training/: config.rs  loss.rs  mod.rs  target.rs  train.rs
