[package]
name = "breast-cancer-detector-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
burn = { version = "0.20.1", features = ["std", "dataset", "autodiff"] }
burn-wgpu = "0.20.1"
clap = { version = "4.6.0", features = ["derive"] }
image = "0.25.10"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
